--- a/conditions/templates/home.html
+++ b/conditions/templates/home.html
@@ -5,6 +5,15 @@
     <title>Prospect Park Conditions</title>
 </head>
 <body>
+    <h1>Prospect Park Conditions</h1>
+    <input id="id_new_date_time" placeholder="Enter the date and time of the report"/>
+    <input id="id_new_road_condition" placeholder="Enter a road condition for the report"/>
+    <input id="id_new_weather_report" placeholder="Enter the weather with the report"/>
+    <input id="id_new_crowds_report" placeholder="Enter the crowd condition with the report"/>
+    <input id="id_new_report_notes" placeholder="Enter any notes with the report"/>
 
+    <table id="id_condition_report_table">
+
+    </table>
 </body>
 </html>
