--- a/conditions/templates/conditionreport.html
+++ b/conditions/templates/conditionreport.html
@@ -5,9 +5,9 @@
     <title>Prospect Park Conditions</title>
 </head>
 <body>
-<h1>Enter in a new condition</h1>
+<h1>Prospect Park Conditions</h1>
 
-<form method="POST">
+<form method="POST" action="/">
     <input name="new_date_time" id="id_new_date_time" placeholder="Enter the date and time of the report"/>
     <input name="new_road_condition" id="id_new_road_condition" placeholder="Enter a road condition for the report"/>
     <input name="new_weather_report" id="id_new_weather_report" placeholder="Enter the weather with the report"/>
@@ -18,5 +18,15 @@
 
     {% csrf_token %}
 </form>
+<table id="id_condition_report_table">
+    {% for report in reports %}
+        <tr><td>{{ report.date_time }}</td></tr>
+        <tr><td>{{ report.road_condition }}</td></tr>
+        <tr><td>{{ report.weather_report }}</td></tr>
+        <tr><td>{{ report.crowds_report }}</td></tr>
+        <tr><td>{{ report.report_notes }}</td></tr>
+        <tr><td>----------------------------------------------------</td></tr>
+    {% endfor %}
+</table>
 </body>
 </html>
