--- a/conditions/templates/condition_report.html
+++ b/conditions/templates/condition_report.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Prospect Park Conditions</h1>
 
-<form method="POST" action="/">
+<form method="POST" action="/condition-reports/new">
     <input name="new_date_time" id="id_new_date_time" placeholder="Enter the date and time of the report"/>
     <input name="new_road_condition" id="id_new_road_condition" placeholder="Enter a road condition for the report"/>
     <input name="new_weather_report" id="id_new_weather_report" placeholder="Enter the weather with the report"/>
