--- a/conditions/templates/home.html
+++ b/conditions/templates/home.html
@@ -1,22 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Prospect Park Conditions</title>
-</head>
-<body>
-<h1>Enter in a new condition</h1>
+{% extends 'base.html' %}
 
-<form method="POST" action="/condition-reports/new">
-    <input name="new_date_time" id="id_new_date_time" placeholder="Enter the date and time of the report"/>
-    <input name="new_road_condition" id="id_new_road_condition" placeholder="Enter a road condition for the report"/>
-    <input name="new_weather_report" id="id_new_weather_report" placeholder="Enter the weather with the report"/>
-    <input name="new_crowds_report" id="id_new_crowds_report" placeholder="Enter the crowd condition with the report"/>
-    <input name="new_report_notes" id="id_new_report_notes" placeholder="Enter any notes with the report"/>
+{% block header_text %} Enter in a new condition report {% endblock %}
 
-    <input id="id_submit_button" type="submit" value="Submit" />
-
-    {% csrf_token %}
-</form>
-</body>
-</html>
+{% block form_action %}/condition-reports/new{% endblock %}
